2001-06-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* contain.cc: fixed spellbook-creation bug
	* Makefile.am: fixed build order (server before mapedit)

2001-06-17  Ryan Nunn <triforce@merlin.net.au>
	* cheat_screen.cc : Added global flag modifier. Enabled NPC Experience,
	  training, and general stat modifying.

2001-06-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gumps/Jawbone_gump.*: gump for the Serpent Jawbone
	* gamewin.cc, gumps/Gump.cc, objs/contain.cc: use new gump
	* Makefile.*: build new gump
	* objs/jawbone.*: Jawbone_object
	* keys.cc, keyactions.*, defaultkeys.txt: 'j' = show jawbone

2001-06-17  Jeff Freedman  <jeff@amy.nerble.net>

	* objs.cc: Use Check_mask() if shapenum=c_any_shapenum.  Can now
	use Erstam's machine.

2001-06-16  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode/compiler/Makefile.am: only clean uclex.cc/ucparse.cc on maintainer-clean (thanks to Robert Bihlmeyer)

2001-06-15  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/exult_si.flx, data/si/*: new data file (exult_si.flx)
	* Makefile.*, exult.spec.in: build/distribute new data file
	* data/bg/BGmap.shp, data/si/SImap.shp: BG and SI maps
	* ??game.*, gamewin.*, intrinsics.*, Face_button.cc, Paperdoll_gump*.*:
	exultbg_flx to gameflx. (exult_bg.flx for BG, exult_si.flx for SI)
	* cheat.cc: use real maps for the teleport cheat
	* intrinsics.cc, cheat.cc: tweaked map markers

2001-06-15  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Emulate_swapout() now does chunks 3 or more away.
	* combat.cc: Manual combat mode works.

2001-06-14  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* bgintrinsics.h: added 2 guesses
	* exult.cc: don't show hand cursor when clicking left mouse button

2001-06-14  Dancer Vesperman <dancer@users.sourceforge.net>
	- Code Nazi
	* server/objserial.cc: std::string, std::memcpy, std::strlen

2001-06-13  Jeff Freedman  <jeff@amy.nerble.net>

	* Several: 'opponent' from Combat_schedule is now 'target' in